# WanderSpire-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md  Rendering.md
CSharp/: WanderSpire.sln
CSharp/Assets/Prefabs/: bush.json  guard.json  orc.json  player.json
CSharp/Assets/shaders/: fragment.glsl  vertex.glsl
CSharp/Game/: BehaviourFactory.cs  Game.csProj  SceneManager.cs  ScriptRegistry.cs
CSharp/Game/Behaviours/: AIBehaviour.cs  PlayerController.cs
CSharp/Game/Camera/: CameraController.cs
CSharp/Game/Dto/: AIParams.cs  FactionComponent.cs  StatsComponent.cs  (+1 more)
CSharp/Player/: Program.cs  WanderSpire.Player.csproj
CSharp/SceneEditor/: App.axaml  App.axaml.cs  Program.cs  SceneEditor.csproj  ViewLocator.cs
CSharp/ScriptHost/: ContentInterfaces.cs  ContentLoader.cs  ContentPaths.cs  Entity.cs  EventBus.cs  Input.cs  Interfaces.cs  PrefabManager.cs  ScriptEngine.cs  ScriptHost.csproj  TickManager.cs  WanderSpireEngine.cs  WorldWrapper.cs
Engine/WanderSpire/: CMakeLists.txt
Engine/WanderSpire/include/WanderSpire/Components/: AllComponents.h  AnimatedTileComponent.h  AnimationClipsComponent.h  AnimationStateComponent.h  AssetReferenceComponent.h  AutoTilingComponent.h  Commentcomponent.h  CullingComponent.h  EditorMetadataComponent.h  FacingComponent.h  GizmoComponent.h  GridPositionComponent.h  IDComponent.h  LODComponent.h  LayerComponent.h  ObstacleComponent.h  PlayerTagComponent.h  PrefabIdComponent.h  PrefabInstanceComponent.h  RenderBatchComponent.h  SceneNodeComponent.h  ScriptDataComponent.h  SelectableComponent.h  SpatialNodeComponent.h  SpriteAnimationComponent.h  SpriteComponent.h  SpriteRenderComponent.h  TagComponent.h  TargetGridPositionComponent.h  TileBrushComponent.h  TileComponent.h  TilePaletteComponent.h  TilemapChunkComponent.h  TilemapLayerComponent.h  TransformComponent.h
Engine/WanderSpire/include/WanderSpire/Core/: AppState.h  Application.h  AssetLoader.h  AssetManager.h  ConfigManager.h  EngineConfig.h  EngineContext.h  Events.h  Exports.h  FileWatcher.h  GLObjects.h  Reflection.h  ReflectionMacros.h  SDLContext.h  TickManager.h  eventBus.h
Engine/WanderSpire/include/WanderSpire/ECS/: JsonGLM.hpp  PrefabManager.h  SerializableComponents.h  Serialization.h  World.h
Engine/WanderSpire/include/WanderSpire/Editor/: AssetDependencyTracker.h  CommandHistory.h  EditorGlobals.h  EditorSystems.h  ICommand.h  LayerManager.h  SceneHierarchyManager.h  SelectionManager.h  SpatialPartitioner.h
Engine/WanderSpire/include/WanderSpire/Editor/Commands/: ComponentCommands.h  CompoundCommand.h  EditorCommandUtils.h  HierarchyCommands.h  LayerCommands.h  PrefabCommands.h  SelectionCommands.h  TilemapCommands.h  TransformCommands.h
Engine/WanderSpire/include/WanderSpire/Editor/TilePaint/: AutoTiling.h  TileBrush.h  TileLayerManager.h  TilePaintSystems.h  TilePaintingManager.h  TilePalette.h
Engine/WanderSpire/include/WanderSpire/Graphics/: Camera2D.h  GLStateManager.h  InstanceRenderer.h  OpenGLDebug.h  RenderCommand.h  RenderManager.h  RenderResourceManager.h  Shader.h  SpriteRenderer.h  SpriteSheet.h  Texture.h  TextureAtlas.h
Engine/WanderSpire/include/WanderSpire/Input/: InputManager.h
Engine/WanderSpire/include/WanderSpire/Scene/: ISceneManager.h  JsonSceneLoader.h  JsonSceneSaver.h  PostProcessors.h  SceneManager.h  SceneManagerFactory.h
Engine/WanderSpire/include/WanderSpire/Systems/: AnimationPlaybackSystem.h  AnimationSystem.h  ChunkStreamSystem.h  RenderSystem.h  SpriteUpdateSystem.h  TickSystem.h
Engine/WanderSpire/include/WanderSpire/World/: Pathfinder2D.h  TileDefinitionManager.h  TilemapSystem.h
Engine/WanderSpire/include/WanderSpire/utils/: HashFunc.h
Engine/WanderSpire/src/Core/: Application.cpp  AssetLoader.cpp  AssetManager.cpp  ConfigManager.cpp  EventBus.cpp  FileWatcher.cpp  GLObjects.cpp  Reflection.cpp  SDLContext.cpp  TickManager.cpp
Engine/WanderSpire/src/ECS/: PrefabManager.cpp  World.cpp
Engine/WanderSpire/src/Editor/: AssetDependencyTracker.cpp  CommandHistory.cpp  EditorGlobals.cpp  LayerManager.cpp  SceneHierarchyManager.cpp  SelectionManager.cpp  SpatialPartitioner.cpp  TileLayerManager.cpp
Engine/WanderSpire/src/Editor/Commands/: ComponentCommands.cpp  CompoundCommand.cpp  CreateGameObjectCommand.cpp  DeleteGameObjectCommand.cpp  EditorCommandUtils.cpp  FloodFillCommand.cpp  MoveCommand.cpp  PaintTilesCommand.cpp  ReparentCommand.cpp  SelectionCommand.cpp  SetTileCommand.cpp  TransformCommand.cpp
Engine/WanderSpire/src/Editor/TilePaint/: TilePaintingManager.cpp
Engine/WanderSpire/src/Graphics/: Camera2D.cpp  InstanceRenderer.cpp  OpenGLDebug.cpp  RenderCommand.cpp  RenderManager.cpp  RenderRessourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  SpriteSheet.cpp  Texture.cpp  TextureAtlas.cpp
Engine/WanderSpire/src/Input/: InputManager.cpp
Engine/WanderSpire/src/Scene/: JsonSceneLoader.cpp  JsonSceneSaver.cpp  PostProcessors.cpp  SceneManager.cpp  SceneManagerFactory.cpp
Engine/WanderSpire/src/Systems/: AnimationPlaybackSystem.cpp  AnimationSystem.cpp  ChunkStreamSystem.cpp  RenderSystem.cpp  SpriteUpdateSystem.cpp  TickSystem.cpp
Engine/WanderSpire/src/World/: Pathfinder2D.cpp  TileDefinitionManager.cpp  TilemapSystem.cpp
Engine/WanderSpire/src/assets/ai/: basic_melee.fsm.json
Engine/WanderSpire/src/assets/items/: bronze_sword.json
Engine/WanderSpire/src/assets/prefabs/: bush.json  guard.json  orc.json
Engine/WanderSpire/src/assets/shaders/: fragment.glsl  vertex.glsl
EngineCore/: CMakeLists.txt
EngineCore/include/: EngineAPI.h  EngineCore.h
EngineCore/src/: EngineCore.cpp  SceneEditorAPI.cpp  cimgui.cpp
tests/: CMakeLists.txt  TestHelpers.h  test_main.cpp  test_pathfinding.cpp  test_prefab_cycle.cpp  test_reflection.cpp  test_serialization.cpp
(+131 files in other folders)
